--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
-    "build-package": "babel src --out-dir dist"
+    "build-package": "babel src --out-dir dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -42,7 +44,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
-  "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard",
+  "homepage": "https://shuttld.github.io",
   "optionalDependencies": {
     "babel-eslint": "7.2.3",
     "eslint": "4.19.1",
@@ -53,10 +55,11 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-import-rename": "1.0.1",
+    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
-    "babel-preset-es2015": "6.24.1"
+    "babel-preset-es2015": "6.24.1",
+    "gh-pages": "^2.0.1"
   }
 }
